# gazet

./: .dockerignore  .gitignore  DEPLOY_TO_HF.md  Dockerfile  Dockerfile.compose  IMPROVEMENTS.md  README.md  compare_demo.py  demo_app.py  docker-compose.yml  gazet_demo.py  pyproject.toml  supervisord.conf
dataset/: PIPELINE_FLOW.md  README.md  config.smalltest.yaml  config.yaml  modal_app.py
dataset/scripts/: __init__.py  build_inventory.py  build_relations.py  cli.py  convert_to_conversation_format.py  export_training_data.py  generate_samples.py  normalize_geodata.py  sql_templates.py  validate_dataset.py
finetune/: README.md  check_token_lengths.py  config.py  data.py  eval_batch.py  eval_cli.py  eval_demo.py  infer_modal.py  make_test_prompt.py  merge_checkpoint.py  nlg.py  prompts.py  test_raw_completion.py  train_modal.py  train_modal_qwen35.py
ingest/: convert_natural_earth.py
modal_serve/: README.md  serve.py
src/gazet/: __init__.py  __main__.py  api.py  config.py  export.py  lm.py  schemas.py  search.py  sql.py
