[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gazet"
version = "0.1.0"
description = "Lean natural-language geocoder with GIS operations over Overture and Natural Earth parquet datasets"
requires-python = ">=3.13.0, <3.14"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "dspy>=3.1.3",
    "pandas>=2.2",
    "pydantic>=2.0",
    "pyarrow>=17.0.0",
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "sqlparse>=0.5.5",
]
optional-dependencies = { demo = ["streamlit", "requests", "pydeck"], dev = ["ruff"] }

[project.scripts]
gazet-dataset = "dataset.scripts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gazet", "dataset"]

[dependency-groups]
dataset = [
    "modal>=1.4.0",
]
dev = [
    "huggingface-hub[cli]>=1.5.0",
]
